--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
+asgiref==3.9.1
+Django==5.2.4
+django-cors-headers==4.7.0
+django-extensions==4.1
+django-filter==25.1
+django-rest-framework==0.1.0
+djangorestframework==3.16.0
 mysql-connector-python==9.2.0
+mysqlclient==2.2.7
+pillow==11.3.0
+python-dotenv==1.1.1
+sqlparse==0.5.3
