--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,59 @@
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pdb
+*.so
 
-# Django-specific files
+# Django stuff
 *.log
 *.pot
 *.pyc
-__pycache__/
-local_settings.py
 db.sqlite3
-media/ # User-uploaded media files
-static_collected/ # Collected static files (if you collect them to a separate directory)
+media/
+staticfiles/
 
-# Virtual Environment
-.env
+# If you use Django collectstatic, ignore the collected static directory
+/static/
+
+# Virtual environment
 venv/
 env/
+ENV/
+.venv/
 
-# IDE-specific files (e.g., PyCharm)
+# IDE / Editor
+.vscode/
 .idea/
+*.sublime-project
+*.sublime-workspace
 
-# Operating System specific files
+# OS-specific
 .DS_Store
 Thumbs.db
 
-# Other files
+# Pytest / Coverage
 .coverage
+htmlcov/
 .tox/
-.eggs/
-.env
-.local_env
-temsmet/media
-media
+pytest_cache/
+.cache/
+
+# MyPy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pycharm
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Local settings
+local_settings.py
+
+# Backup files
+*~
+*.bak
